# exomodel

./: .gitignore  CHANGELOG.md  CITATION.cff  NOTICE  README.md  pyproject.toml
src/exomodel/: __init__.py  exoagent.py  exomodel.py  exomodel_list.py
src/exomodel/prompt/: create_list.md  filling_instructions.md  master_prompt.md  run_analysis.md  run_object_prompt.md  update_field.md  update_object.md
src/exomodel/rag/: rag_template.md
tests/: rag_proposal.md  shopping_item.md  test_exoagent.py  test_exomodel.py  test_exomodel_list.py  test_proposal.py  test_shopping_list.py
tests/integration/: test_prompt_rendering.py  test_rag_pipeline.py  test_smoke.py
