[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exomodel"
version = "1.0.1"
description = "ExoModel AI: Object-Oriented Agentic AI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "python-dotenv>=1.2.2",
    "pydantic>=2.12.5",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=0.3.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.14.3",
    "html2text>=2025.4.15",
]

[project.optional-dependencies]
# Install one of these depending on the LLM provider you use:
#   pip install exomodel[google]       → Gemini (default model)
#   pip install exomodel[anthropic]    → Claude
#   pip install exomodel[openai]       → OpenAI / Azure OpenAI
#   pip install exomodel[cohere]       → Cohere
#   pip install exomodel[all]          → all providers
google = ["langchain-google-genai>=4.2.1"]
anthropic = ["langchain-anthropic>=0.3.0"]
openai = ["langchain-openai>=0.3.0"]
cohere = ["langchain-cohere>=0.4.0"]
all = [
    "langchain-google-genai>=4.2.1",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-cohere>=0.4.0",
]
dev = [
    "pytest>=9.0.3",
    "autopep8>=2.3.2",
    "langchain-google-genai>=4.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/exomodel"]

# Pytest Setup for 'src' Layout
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests that hit the real LLM (deselect with '-m not integration')",
]

# Ruff Setup to maintain clean code
[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
